@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.47 2020/08/30 08:40:33 tnn Exp $
+# $NetBSD: Makefile,v 1.48 2020/11/29 23:12:43 dbj Exp $
 #
 
 COMMENT=	Wireless communication tools and applications
@@ -39,6 +39,7 @@ SUBDIR+=	kalibrate-hackrf
 SUBDIR+=	kalibrate-rtl
 SUBDIR+=	libmirisdr
 SUBDIR+=	locator
+SUBDIR+=	lpcnetfreedv
 SUBDIR+=	nec2c
 SUBDIR+=	osmo-sdr
 SUBDIR+=	predict
