@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2020,v 1.6481 2020/11/29 23:10:24 dbj Exp $
+$NetBSD: CHANGES-2020,v 1.6482 2020/11/29 23:12:43 dbj Exp $
 
 Changes to the packages collection and infrastructure in 2020:
 
@@ -9453,3 +9453,4 @@ Changes to the packages collection and infrastructure in 2020:
 	Updated shells/oksh to 6.8.1 [schmonz 2020-11-29]
 	Updated sysutils/ddrescue to 1.25 [dbj 2020-11-29]
 	Updated ham/codec2 to 0.9.2 [dbj 2020-11-29]
+	Added ham/lpcnetfreedv-0.2 [dbj 2020-11-29]
